objects/Asset.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__RootItemId__c</fullName>
        <description>ID of the ultimate, top-level parent Asset. Used by Vlocity CPQ to track a full tree of Assets.</description>
        <label>RootItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Assets</relationshipLabel>
        <relationshipName>ServiceAccountAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceOfFunds__c</fullName>
        <description>For annuities, a description of the source of funds.</description>
        <label>Source of Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceQuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which Asset is created.</description>
        <label>Source Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>SourceQuoteAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that this asset describes.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_ins__Subscription__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                    <isActive>false</isActive>
                    <label>6 Month</label>
                </value>
                <value>
                    <fullName>Multi-Year</fullName>
                    <isActive>false</isActive>
                    <label>Multi-Year</label>
                </value>
                <value>
                    <fullName>No Term</fullName>
                    <isActive>false</isActive>
                    <label>No Term</label>
                </value>
                <value>
                    <fullName>Quaterly</fullName>
                    <isActive>false</isActive>
                    <label>Quaterly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmountForTerm__c</fullName>
        <description>The total amount of tax, fee, and premium that will be collected for this policy over the full term.</description>
        <formula>vlocity_ins__TotalFeeForTerm__c + vlocity_ins__TotalTaxForTerm__c + vlocity_ins__TotalPremiumForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>The total amount of tax, fee, and premium.</description>
        <formula>vlocity_ins__TotalTaxAmount__c + vlocity_ins__TotalFeeAmount__c + vlocity_ins__StandardPremium__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalClaimPaidAmount__c</fullName>
        <description>The total amount paid in claims.</description>
        <label>Total Claim Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeAmount__c</fullName>
        <description>Total amount of itemized fees for Asset.</description>
        <label>Total Fee Amount</label>
        <summarizedField>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__AssetId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeForTerm__c</fullName>
        <description>The total amount of fee that will be collected for this policy over the full term.</description>
        <label>Total Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumForTerm__c</fullName>
        <description>The total amount of premium that will be collected for this policy over the full term.</description>
        <label>Total Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxAmount__c</fullName>
        <description>Total amount of itemized taxes for Asset.</description>
        <label>Total Tax Amount</label>
        <summarizedField>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__AssetPricingAdjustment__c.vlocity_ins__AssetId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxForTerm__c</fullName>
        <description>The total amount of tax that will be collected for this policy over the full term.</description>
        <label>Total Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalValue__c</fullName>
        <description>For investment accounts, the current total value of all holdings.</description>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>The type of policy or financial account such as term life, auto, homeowners, variable annuity, 401(k), IRA, or money market. More detailed than the line of business.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Boatowners</fullName>
                </value>
                <value>
                    <fullName>Business Owners</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>D&amp;O</fullName>
                </value>
                <value>
                    <fullName>Equity−indexed annuity</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Inland Marine</fullName>
                </value>
                <value>
                    <fullName>Ocean Marine</fullName>
                </value>
                <value>
                    <fullName>Permanent Life</fullName>
                </value>
                <value>
                    <fullName>Pers/Scheduled Property</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Renters</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Umbrella Liability</fullName>
                </value>
                <value>
                    <fullName>Unit Linked Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Universal Variable Life</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Life</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitofFaceAmount__c</fullName>
        <description>For annuities, unit of face amount.</description>
        <label>Unit of Face Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValuePerUnit__c</fullName>
        <description>For annuities, currency value per unit of face amount.</description>
        <label>Value Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__CommercialLines</fullName>
        <active>true</active>
        <label>Commercial Lines</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__IndividualAnnuity</fullName>
        <active>true</active>
        <label>Annuity</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__IndividualHealth</fullName>
        <active>true</active>
        <label>Individual Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__IndividualLife</fullName>
        <active>true</active>
        <label>Individual Life</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Investment</fullName>
        <active>true</active>
        <label>Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__PersonalLines</fullName>
        <active>true</active>
        <label>Personal Lines</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>